c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_parse/misplaced_char_literal.c
// A char literal is a constant, it's only permitted where constants are
// and not, for example, where you'd normally expect to find a postfix operator

int main(void) {
    int a = 3;
    return a'1';
}